-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
5.0.0
-
None
-
Mac OS 10.6 with qtdeclarative:animation-refactor branch at 67d8851e20aa50012d9360580af19f2f7476a093
Tested on Mac OS 10.6 with qtdeclarative:animation-refactor branch at 67d8851e20aa50012d9360580af19f2f7476a093
The NumberAnimation below will only run once instead of three times.
If taken out of the SequentialAnimation, the NumberAnimation will run three times as expected.
import QtQuick 2.0 Item { width: 200; height: 200 Rectangle { id: rect x: 50; y: 50; width: 50; height: 50; color: "red" SequentialAnimation on rotation { NumberAnimation { from: 0; to: 90; duration: 500 loops: 3 } } } }
| For Gerrit Dashboard: QTBUG-23092 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 12076,1 | Fix animation looping. | animation-refactor | qt/qtdeclarative | Status: MERGED | +2 | 0 |