Fix animation looping.

Task-number: QTBUG-23092
Change-Id: I67b4e9565228d4cdf7aa4a8fe1c490a5e471ee47
Reviewed-by: Yunqiao Yin <charles.yin@nokia.com>